--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,12 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.0"
     defaultConfig {
         applicationId "com.RSPL.MEDIA"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.6"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -76,5 +76,11 @@ dependencies {
     compile 'com.android.support:support-v4:25.4.0'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'junit:junit:4.12'
+
+    ////    Add Zxing library to generate barcode
+    compile 'com.google.zxing:core:3.2.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    //
+
 }
 apply plugin: 'com.google.gms.google-services'
